updated height of form-wrap fix

--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -194,7 +194,7 @@ div.positive-income p.value {
 
 /*this rule fixes the button height on the last page*/
 .form-wrap.fix {
-  height: 410px;
+  height: 409px;
 }
 
 .next {
